--- a/spotify_player/Cargo.toml
+++ b/spotify_player/Cargo.toml
@@ -34,6 +34,7 @@ tokio = { version = "1.48.0", features = [
 ] }
 toml = "0.9.8"
 ratatui = { version = "0.29.0" }
+tachyonfx = { version = "0.7", optional = true }
 rand = "0.9.2"
 maybe-async = "0.2.10"
 async-trait = "0.1.89"
@@ -93,8 +94,9 @@ pixelate = ["image"]
 notify = ["notify-rust"]
 daemon = ["daemonize", "streaming"]
 fzf = ["fuzzy-matcher"]
+fx = ["tachyonfx"]
 
-default = ["rodio-backend", "media-control"]
+default = ["rodio-backend", "media-control", "fx"]
 
 [package.metadata.binstall]
 pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"
